fix truncated GET OFFER (chrome browser)

--- a/app/assets/stylesheets/application/cambiu.scss
+++ b/app/assets/stylesheets/application/cambiu.scss
@@ -1203,12 +1203,18 @@ body#cambiu {
       height:25%;
       .title {
         font-weight: 500;
-        @include vfont-size(6vw);
+        font-size: 3vh !important;
+      }
+      .text {
+        height: 50%;
+        font-size: 3vh !important;
       }
       .text:first-of-type {
         text-transform: uppercase;
       }
       .getOffer {
+        height: 50%;
+        font-size: 3.5vh !important;
         text-transform: uppercase;
       }
     }
